--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,6 +1,6 @@
 redis: &default
   adapter: redis
-  url: 
+  url: redis://localhost:6379/1
 
 production:
   channel_prefix: AliasMadness_production
